WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135743
Web Inspector: new glyphs are visible on OS X 10.9 builds
https://bugs.webkit.org/show_bug.cgi?id=135743
Summary
Web Inspector: new glyphs are visible on OS X 10.9 builds
Brian Burg
Reported
2014-08-07 21:09:27 PDT
Per screenshot. The dashboard looks a little different too, though I can't pinpoint what changed. Maybe the font is different?
Attachments
screenshot
(110.96 KB, image/png)
2014-08-07 21:09 PDT
,
Brian Burg
no flags
Details
tex color change
(231.47 KB, image/png)
2014-08-07 21:21 PDT
,
Brian Burg
no flags
Details
Patch
(22.39 KB, patch)
2014-08-08 14:29 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(15.62 KB, patch)
2014-08-10 02:45 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(15.63 KB, patch)
2014-08-10 02:47 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Brian Burg
Comment 1
2014-08-07 21:09:48 PDT
Created
attachment 236262
[details]
screenshot
Radar WebKit Bug Importer
Comment 2
2014-08-07 21:10:05 PDT
<
rdar://problem/17955582
>
Radar WebKit Bug Importer
Comment 3
2014-08-07 21:13:51 PDT
<
rdar://problem/17955579
>
Brian Burg
Comment 4
2014-08-07 21:20:58 PDT
Changes: - The chevrons to show full-height console - Folder tree element icons - the X dismiss glyph in Timeline sidebar panel Another regression: in the resources sidebar panel, some text of main resource tree element and its download/reload glyphs turn black if you mousedown on the Timelines toolbar icon but don't mouseup. I think this is an :active style getting stuck or something?
Brian Burg
Comment 5
2014-08-07 21:21:25 PDT
Created
attachment 236263
[details]
tex color change
Brian Burg
Comment 6
2014-08-07 21:48:39 PDT
Also, the glyphs for docking to the side or bottom are different.
Timothy Hatcher
Comment 7
2014-08-08 14:29:04 PDT
Created
attachment 236308
[details]
Patch
Brian Burg
Comment 8
2014-08-08 14:38:24 PDT
I think the debugger play/pause button is also wrong (at least it looked weird when I hooked up Xcode debugger to the crash), but hard to tell with debugging broken. It may just be a render glitch as the process crashes?
Joseph Pecoraro
Comment 9
2014-08-08 14:44:48 PDT
Comment on
attachment 236308
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236308&action=review
r=me, though you may want to check Brian's recent comment about Debugger buttons.
> Source/WebInspectorUI/UserInterface/Views/DataGrid.css:163 > -.data-grid td > div, .data-grid th > div { > +.data-grid th > div, > +.data-grid td > div {
I wonder when we should start forward and use :-webkit-any(...). This could be: .data-grid :-webkit-any(th, td) > div I think we should stick with what we have now though =)
Timothy Hatcher
Comment 10
2014-08-10 02:45:46 PDT
Created
attachment 236343
[details]
Patch
Timothy Hatcher
Comment 11
2014-08-10 02:47:39 PDT
Created
attachment 236344
[details]
Patch
WebKit Commit Bot
Comment 12
2014-08-10 03:25:44 PDT
Comment on
attachment 236344
[details]
Patch Clearing flags on attachment: 236344 Committed
r172379
: <
http://trac.webkit.org/changeset/172379
>
WebKit Commit Bot
Comment 13
2014-08-10 03:25:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug